# love-deaths-ai

./: .gitignore  CMakeLists.txt  LOCAL_AI_SETUP.md  README.md  build.sh
src/: main.cpp
src/ai/: AiDebugLog.cpp  AiDebugLog.h  AiRuntimeManager.cpp  AiRuntimeManager.h  LocalLLMClient.cpp  LocalLLMClient.h  NpcChatSystem.cpp  NpcChatSystem.h  NpcCommandAI.cpp  NpcCommandAI.h
src/core/: App.cpp  App.h  Camera2D.cpp  Camera2D.h  HudRenderer.cpp  HudRenderer.h  PixelFont.cpp  PixelFont.h
src/game/: Actor.h  Animal.cpp  Animal.h  HostileAI.cpp  HostileAI.h  NpcAI.cpp  NpcAI.h  Pawn.h  Pet.cpp  Pet.h  Player.cpp  Player.h  TileMap.cpp  TileMap.h
tools/: Start-LocalAI.ps1
